--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "Āfareaitu",
     "Airbnbs",
     "america",
+    "Anau",
     "Aragorn",
     "Aremiti",
     "Argonath",
@@ -27,9 +28,11 @@
     "cliffside",
     "Coromandel",
     "Cortazar",
+    "Darran",
     "Denize",
     "Dimholt",
     "Dulce",
+    "Eglinton",
     "empanadas",
     "facturas",
     "Fernet",
@@ -70,6 +73,7 @@
     "lauren",
     "Legolas",
     "longfin",
+    "Lumsden",
     "Maguay",
     "Malbec",
     "Malen",
@@ -182,6 +186,7 @@
     "Whakapapa",
     "Whakarewarewa",
     "Whanganui",
+    "whio",
     "Whitianga",
     "WWOOFing",
     "Yaris",
