--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,17 +6,21 @@
     "Airbnbs",
     "america",
     "Anau",
+    "Anduin",
     "Aragorn",
     "Aremiti",
     "Argonath",
     "Arístides",
+    "Astin",
     "Avenida",
     "Bambu",
+    "Beorn's",
     "bigature",
     "bigatures",
     "Blancas",
     "Blanco",
     "Bookme",
+    "Boromir",
     "bottlenose",
     "BRÖD",
     "Cabify",
@@ -25,24 +29,31 @@
     "Cerro",
     "Chaltén",
     "Changs",
+    "Chlorociboria",
     "cliffside",
     "Coromandel",
     "Cortazar",
     "Darran",
     "Denize",
     "Dimholt",
+    "Dimrill",
     "Dulce",
     "Eglinton",
     "empanadas",
     "facturas",
+    "Fangorn",
+    "Faramir's",
     "Fernet",
     "Fitz",
     "Foulwind",
     "Francaise",
     "fútbol",
+    "Galadriel",
     "Gallipoli",
+    "Gamgee",
     "Gimli",
     "Glamdring",
+    "Glenorchy",
     "Gollum",
     "Gollum's",
     "Gondor",
@@ -52,13 +63,16 @@
     "Hahei",
     "haka",
     "hangi",
+    "Harad",
     "Havanna",
     "Hija",
+    "Hithoel",
     "Hobbiton",
     "Hoho",
     "Hokitika",
     "iguazu",
     "Iguazú",
+    "Isengard",
     "Ithilien",
     "Itimahuwhero",
     "Kaitoke",
@@ -73,6 +87,7 @@
     "lauren",
     "Legolas",
     "longfin",
+    "Lothlórien",
     "Lumsden",
     "Maguay",
     "Malbec",
@@ -84,10 +99,12 @@
     "Manutea",
     "Māori",
     "Marae",
+    "Mararoa",
     "Martín",
     "Mata",
     "Matakitaki",
     "Matamata",
+    "Mavora",
     "Melipal",
     "Miramar",
     "Moehau",
@@ -95,12 +112,14 @@
     "Montaña",
     "moorea",
     "Mordor",
+    "Moria",
     "Motu",
     "Muna",
     "Nadus",
     "Ngauruhoe",
     "oceania",
     "Ohakune",
+    "Oliphaunts",
     "Oliveria",
     "Opunohu",
     "Orcrist",
@@ -128,6 +147,7 @@
     "Rainforest",
     "rākau",
     "Reggaeton",
+    "Remarkables",
     "Restó",
     "Rippon",
     "Rivendell",
@@ -139,15 +159,20 @@
     "Ruapehu",
     "Ruca",
     "Salkantay",
+    "Samwise",
+    "Saruman",
     "Sauvignon",
     "Serkis",
+    "Silverlode",
     "Skifield",
+    "Smaug",
     "Sofitel",
     "splooge",
     "Stoneridge",
     "Sucia",
     "Suzie",
     "Symons",
+    "Takaro",
     "Tamaki",
     "Tapu",
     "Taranaki",
