--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@next/third-parties": "^15.2.5",
+    "@next/third-parties": "15.3.1",
     "@vercel/analytics": "^1.5.0",
     "@vercel/postgres": "^0.10.0",
     "@vercel/postgres-kysely": "^0.10.0",
@@ -64,7 +64,7 @@
     "fuse.js": "^7.1.0",
     "gray-matter": "^4.0.3",
     "kysely": "^0.27.6",
-    "next": "^15.2.5",
+    "next": "15.3.1",
     "next-share": "^0.27.0",
     "react": "19.1.0",
     "react-cookie-consent": "^9.0.0",
@@ -73,13 +73,13 @@
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
     "sharp": "^0.34.1",
-    "zod": "^3.24.2"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
     "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.13.0",
-    "@playwright/test": "^1.51.1",
+    "@playwright/test": "^1.52.0",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/addon-interactions": "^8.6.12",
     "@storybook/addon-links": "^8.6.12",
@@ -90,30 +90,30 @@
     "@storybook/react": "^8.6.12",
     "@storybook/test": "^8.6.12",
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4.1.3",
+    "@tailwindcss/postcss": "^4.1.5",
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/escape-html": "^1.0.4",
     "@types/jest": "^29.5.14",
-    "@types/react": "19.1.0",
-    "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.3",
+    "@vitejs/plugin-react": "^4.4.1",
     "ajv": "^8.17.1",
     "cssnano": "^7.0.6",
-    "cypress": "^14.3.0",
-    "dotenv": "^16.4.7",
-    "eslint": "^9.24.0",
-    "eslint-config-next": "^15.2.5",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-cypress": "^4.2.1",
+    "cypress": "^14.3.2",
+    "dotenv": "^16.5.0",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "15.3.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-cypress": "^4.3.0",
     "eslint-plugin-markdownlint": "^0.6.0",
     "eslint-plugin-storybook": "^0.12.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jsdom": "^26.0.0",
-    "lint-staged": "^15.5.0",
+    "jsdom": "^26.1.0",
+    "lint-staged": "^15.5.1",
     "markdownlint-cli2": "^0.17.2",
     "postcss": "^8.5.3",
     "prettier": "3.5.3",
@@ -123,7 +123,11 @@
     "tailwindcss": "^4.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
-    "vercel": "^41.5.0",
-    "vitest": "^3.1.1"
+    "vercel": "^41.7.0",
+    "vitest": "^3.1.3"
+  },
+  "overrides": {
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.3"
   }
 }
