--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "node": "^22.11.0 || ^20.9.0 || ^18.12.0",
-    "npm": "^10.0.0"
+    "npm": "^11.0.0 || ^10.0.0 || ^9.0.0"
   },
   "engineStrict": true,
   "devEngines": {
